[package]
name = "chip8-rom-to-opcode"
license = "MIT"
version = "0.1.3"
authors = ["NickPerrin <perrin.64@osu.edu>"]
description = "A simple tool to disassemble chip8 binary files."
repository = "https://github.com/NickPerrin/chip8-rom-to-opcode"
edition = "2018"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
